--- a/Onboarding/templates/about.html
+++ b/Onboarding/templates/about.html
@@ -224,7 +224,7 @@
     </a>
     <p class="text-sm text-gray-200 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4 flex flex-col justify-center align-items"> 
 
-      <h1 class="text-white pr-3 text-center"> 606 Edmondson Ave Suite 200
+      <h1 class="text-white pr-3 md:text-left text-center"> 606 Edmondson Ave Suite 200
         <br>
         <a href="mailto:meaningfulmindsllc@gmail.com">meaningfulmindsllc@gmail.com</a>
         <br>
