--- a/Onboarding/templates/index.html
+++ b/Onboarding/templates/index.html
@@ -51,7 +51,7 @@
   font-style: normal;
 }
  */
-.berkshire-swash-regular , #welcome-banner h1 , #About .about .about-1 h1 {
+.berkshire-swash-regular , #welcome-banner h1 , #About .about .about-1 h1 , p.rates {
   font-family: "Berkshire Swash", serif;
   font-weight: 400;
   font-style: normal;
@@ -201,7 +201,7 @@
         <div class="about mx-auto container flex lg:flex-row flex-col-reverse md:justify-center lg:justify-center  p-5 lg:p-2 xl:p-20">
             <div class="about-1 p-5" data-aos="fade-up"  data-aos-once="true">
                 <!-- <h1 class="text-red-500 text-xl  pb-3 font-extrabold ">Welcome!</h1> -->
-            <img class="w-[100%]" src="{% static 'images/authentic-scene-young-person-undergoing-psychological-therapy.jpg' %}" alt="">
+            <img class="w-[100%]" src="{% static 'images/IMG-20240919-WA0033.jpg' %}" alt="">
             </div>
             <div class="about-2  p-5 pb-4" data-aos="fade-up"  data-aos-once="true">
                 <p class="text-gray-600 font-sans  text-[18px] w-full lg:w-[100%] text-left">
@@ -272,7 +272,7 @@
       <div class="lg:pr-8 lg:pt-4">
         <div class="lg:max-w-lg">
           <!-- <h2 data-aos="fade-up"  data-aos-once="true" class="text-base font-semibold leading-7 text-green-600">Affordable Therapy</h2> -->
-          <p data-aos="fade-up"  data-aos-once="true" class="mt-2 text-3xl font-bold tracking-tight text-blue-500 sm:text-4xl">Rates & Insurance</p>
+          <p data-aos="fade-up"  data-aos-once="true" class="rates mt-2 text-3xl font-bold tracking-tight text-blue-500 sm:text-4xl">Rates & Insurance</p>
           <p class="mt-6 text-lg leading-8 text-gray-600" data-aos="fade-up"  data-aos-once="true" >
             <!-- $_____ per ______ minute session. -->
             Depending on your current health insurance provider or employee benefit plan, it is possible for services to be covered in full or in part. Please contact your provider to verify how your plan compensates you for psychotherapy services.</p>
@@ -456,7 +456,7 @@ diagnosis conditions, which are addressed throughout treatment.
     </a>
     <p class="text-sm text-gray-200 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4 flex flex-col justify-center align-items"> 
 
-      <h1 class="text-white pr-3 text-center"> 606 Edmondson Ave Suite 200
+      <h1 class="text-white pr-3 md:text-left text-center"> 606 Edmondson Ave Suite 200
         <br>
         <a href="mailto:meaningfulmindsllc@gmail.com">meaningfulmindsllc@gmail.com</a>
         <br>
