--- a/Onboarding/templates/services.html
+++ b/Onboarding/templates/services.html
@@ -18,6 +18,8 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
     <style>
         .hidden {
           display: none;
@@ -34,6 +36,11 @@
   font-style: normal;
 }
 
+.title-banner h1 {
+  font-family: "Berkshire Swash", serif;
+  font-weight: 400;
+  font-style: normal;
+}
 
 
 
@@ -154,7 +161,7 @@
           <!-- <h1 class="lg:text-4xl font-bold md:text-3xl text-3xl text-center text-blue-500 capitalize">What We <span class="text-blue-500">do here</span></h1> -->
           <div class="mx-auto max-w-2xl lg:text-center lg:pl-[0px] pl-5 lg:pr-[0px] pr-2 md:mb-8 " >
           
-            <p class="mt-2 text-3xl font-bold tracking-tight uppercase text-blue-500 sm:text-4xl">what we do here</p>
+            <h1 class="mt-2 text-3xl font-bold tracking-tight uppercase text-blue-500 sm:text-4xl">what we do here</h1>
             <p class="mt-6 text-lg leading-8 text-gray-600">Here at Meaningful Minds Therapeutic Services, LLC, we realize that no two 
               people are the same, and we tailor our services to meet specific needs for 
               individuals, family or groups. We love helping people understand the things 
@@ -393,7 +400,7 @@ Facebook - https://web.facebook.com/profile.php?id=100089789233240
     </a>
     <p class="text-sm text-gray-200 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4 flex flex-col justify-center align-items"> 
 
-      <h1 class="text-white pr-3 text-center"> 606 Edmondson Ave Suite 200
+      <h1 class="text-white pr-3 md:text-left text-center"> 606 Edmondson Ave Suite 200
         <br>
         <a href="mailto:meaningfulmindsllc@gmail.com">meaningfulmindsllc@gmail.com</a>
         <br>
