--- a/Onboarding/templates/services.html
+++ b/Onboarding/templates/services.html
@@ -161,7 +161,7 @@
           <!-- <h1 class="lg:text-4xl font-bold md:text-3xl text-3xl text-center text-blue-500 capitalize">What We <span class="text-blue-500">do here</span></h1> -->
           <div class="mx-auto max-w-2xl lg:text-center lg:pl-[0px] pl-5 lg:pr-[0px] pr-2 md:mb-8 " >
           
-            <h1 class="mt-2 text-3xl font-bold tracking-tight uppercase text-blue-500 sm:text-4xl">what we do here</h1>
+            <h1 class="mt-2 text-3xl font-bold tracking-tight  text-blue-500 sm:text-4xl">What We Do Here</h1>
             <p class="mt-6 text-lg leading-8 text-gray-600">Here at Meaningful Minds Therapeutic Services, LLC, we realize that no two 
               people are the same, and we tailor our services to meet specific needs for 
               individuals, family or groups. We love helping people understand the things 
@@ -222,7 +222,7 @@ typically run approximately 3-6 hours each day for one to three days a week.
                     issues, psychiatric illnesses, addictions, and other traumas. OP’s typically run 3-4 hours
                     a day, one to three days a week.
                    <br>
-                   <b>All programs; Partial Hospitalization Program (PHP)-Level II , Intensive Outpatient (IOP)-Level 2.1 and Intensive Outpatient (IOP)-Level 2.1 includes:</b>
+                   <b>All programs( Partial Hospitalization Program (PHP)-Level II , Intensive Outpatient (IOP)-Level 2.1 and Intensive Outpatient (IOP)-Level 2.1) includes:</b>
 <div class="text-white">
   
  <li>Substance Use assessment, evaluation, and consultation</li>
