--- a/Onboarding/templates/index.html
+++ b/Onboarding/templates/index.html
@@ -180,7 +180,7 @@
                     <a href="{% url 'Onboarding:services' %}"><button class="bg-blue-500 p-4 mt-8 w-[200px] text-white text-2xs font-sans uppercase font-bold  cursor-pointer">Our Services</button></a>
                 </div>
                 <div class="about-2 align_middle items-center justify-center   p-5 " data-aos="fade-up"  data-aos-once="true">
-                   <p class="text-gray-500 font-sans  text-[18px] w-[100%] text-left">
+                   <p class="text-gray-500 font-sans  text-[18px] w-[100%] text-center">
                         Here at Meaningful Minds Therapeutic Services, LLC, we realize that no two 
                         people are the same, and we tailor our services to meet specific needs for 
                         individuals, family or groups. We love helping people understand the things 
@@ -201,7 +201,7 @@
         <div class="about mx-auto container flex lg:flex-row flex-col-reverse md:justify-center lg:justify-center  p-5 lg:p-2 xl:p-20">
             <div class="about-1 p-5" data-aos="fade-up"  data-aos-once="true">
                 <!-- <h1 class="text-red-500 text-xl  pb-3 font-extrabold ">Welcome!</h1> -->
-            <img class="w-[100%]" src="{% static 'images/IMG-20240919-WA0033.jpg' %}" alt="">
+            <img class="w-[5500px]" src="{% static 'images/IMG-20240919-WA0033.jpg' %}" alt="">
             </div>
             <div class="about-2  p-5 pb-4" data-aos="fade-up"  data-aos-once="true">
                 <p class="text-gray-600 font-sans  text-[18px] w-full lg:w-[100%] text-left">
@@ -297,7 +297,7 @@
         </div>
       </div>
       <div data-aos="fade-up"  data-aos-once="true" class="">
-        <img src="{% static 'images/2148363603.jpg' %}" alt="Product screenshot" class="w-[28rem] max-w-none rounded-xl shadow-xl ring-1 ring-gray-400/10 sm:w-[57rem] md:-ml-4 lg:-ml-0" width="2432" height="1442">
+        <img src="{% static 'images/2148363603.jpg' %}" alt="Product screenshot" class="w-[28rem] max-w-none rounded-xl shadow-xl ring-1 ring-gray-400/10 sm:w-[37rem] md:-ml-4 lg:-ml-0" width="2432" height="1442">
       </div>
     </div>
   </div>
