--- a/Onboarding/templates/services.html
+++ b/Onboarding/templates/services.html
@@ -162,13 +162,7 @@
           <div class="mx-auto max-w-2xl lg:text-center lg:pl-[0px] pl-5 lg:pr-[0px] pr-2 md:mb-8 " >
           
             <h1 class="mt-2 text-3xl font-bold tracking-tight  text-blue-500 sm:text-4xl">What We Do Here</h1>
-            <p class="mt-6 text-lg leading-8 text-gray-600">Here at Meaningful Minds Therapeutic Services, LLC, we realize that no two 
-              people are the same, and we tailor our services to meet specific needs for 
-              individuals, family or groups. We love helping people understand the things 
-              that are holding them back and/or down with an in-depth approach. After 
-              recognizing underlying factors, clients can fully realize their strengths and 
-              adjust certain behaviors and thoughts to see things in a different, healthier 
-              way.</p>
+    
           </div>
          </div>
             <div class="features-items pt-5 container mx-auto">
@@ -203,7 +197,7 @@ typically run approximately 3-6 hours each day for one to three days a week.
                   </p>
                 </div>
                 <div class="feature-item-img">
-                    <img class="w-[500px] rounded-[20px]" src="{% static 'images/IMG-20240919-WA0034.jpg'%}" alt="">
+                    <img class="w-[500px] rounded-[20px]" src="{% static 'images/IMG-20240919-WA0037.jpg'%}" alt="">
                 </div>
               </div>
               <div data-aos="fade-up"  data-aos-once="true" class="feature-item    px-10 md:px-16 lg:px-28 flex md:flex-row flex-col justify-center items-center align-middle mt-8 py-[72px] bg-green-700">
@@ -222,22 +216,23 @@ typically run approximately 3-6 hours each day for one to three days a week.
                     issues, psychiatric illnesses, addictions, and other traumas. OP’s typically run 3-4 hours
                     a day, one to three days a week.
                    <br>
-                   <b>All programs (Partial Hospitalization Program (PHP)-Level II , Intensive Outpatient (IOP)-Level 2.1 and Intensive Outpatient (IOP)-Level 2.1) includes:</b>
-<div class="text-white">
-  
- <li>Substance Use assessment, evaluation, and consultation</li>
- <li> Group and individual counseling</li>
-  <li>Medication monitoring and education</li>
- <li> Drug Testing and Reporting</li>
- <li> Discharge planning</li>
-  <li>Light snacks and lunch</li>
- <li>Transportation to and from the program</li>
-</div>
+                  
                   </p>
                 </div>
                 <div class="feature-item-img">
                     <img class="w-[500px] mt-8 rounded-[20px]" src="{% static 'images/IMG-20240919-WA0032.jpg' %}" alt="">
                 </div>
+              </div>
+              <div class="mx-auto container md:pt-0  px-10 md:px-16 lg:px-28 mt-12 text- text-gray-500 text-[15px] md:text-xl">
+              <b class="md:text-2xl text-[20px]  text-green-950">All programs (Partial Hospitalization Program (PHP)-Level II , Intensive Outpatient (IOP)-Level 2.1 and Intensive Outpatient (IOP)-Level 2.1) includes:</b>
+                
+               <li>Substance Use assessment, evaluation, and consultation</li>
+               <li> Group and individual counseling</li>
+                <li>Medication monitoring and education</li>
+               <li> Drug Testing and Reporting</li>
+               <li> Discharge planning</li>
+                <li>Light snacks and lunch</li>
+               <li>Transportation to and from the program</li>
               </div>
               <div data-aos="fade-up"  data-aos-once="true" class="feature-item  md:pt-0  px-10 md:px-16 lg:px-28 flex md:flex-row-reverse flex-col justify-center items-center align-middle mt-12 pb-10">
                 <div class="feature-item-text text-left  sm:ml-[20px]  md:w-[750px]">
@@ -280,7 +275,7 @@ typically run approximately 3-6 hours each day for one to three days a week.
                   </p>
                 </div>
                 <div class="feature-item-img">
-                    <img class="w-[500px] rounded-[20px]" src="{% static 'images/IMG-20240919-WA0037.jpg' %}" alt="">
+                    <img class="w-[500px] rounded-[20px]" src="{% static 'images/IMG-20240919-WA0135.jpg' %}" alt="">
                 </div>
               </div>
               <div data-aos="fade-up"  data-aos-once="true" class="feature-item    px-10 md:px-16 lg:px-28 flex md:flex-row flex-col justify-center items-center align-middle mt-8 py-[72px] bg-green-700">
