--- a/Onboarding/templates/index.html
+++ b/Onboarding/templates/index.html
@@ -275,7 +275,10 @@
           <p data-aos="fade-up"  data-aos-once="true" class="rates mt-2 text-3xl font-bold tracking-tight text-blue-500 sm:text-4xl">Rates & Insurance</p>
           <p class="mt-6 text-lg leading-8 text-gray-600" data-aos="fade-up"  data-aos-once="true" >
             <!-- $_____ per ______ minute session. -->
-            Depending on your current health insurance provider or employee benefit plan, it is possible for services to be covered in full or in part. Please contact your provider to verify how your plan compensates you for psychotherapy services.</p>
+           Medicaid / Medical Assistance
+           <br>
+           Rates: Sliding scale offered 
+          </p>
           <dl data-aos="fade-up"  data-aos-once="true" class="mt-10 max-w-xl space-y-8 text-base leading-7 text-gray-600 lg:max-w-none">
            
             <div class="relative">
