--- a/Onboarding/templates/services.html
+++ b/Onboarding/templates/services.html
@@ -348,7 +348,7 @@ may be a necessary tool for continuity of care.
                     <li>Develop an individualized plan of care in conjunction with clients and other
                       behavioral health professionals</li>
                     <br>
-                    Our medication management services help individuals improve their quality
+                    More importantly, our medication management services help individuals improve their quality
 of life. To learn more about medication management or other treatment programs,
 please contact Meaningful Minds Therapeutic Services today.
                    </div>
