--- a/Onboarding/templates/about.html
+++ b/Onboarding/templates/about.html
@@ -154,7 +154,7 @@
             <div class="about mx-auto container flex lg:flex-row flex-col bg-blue-200 md:justify-center lg:justify-evenly  xl:p-20">
                 <div class="about-1 p-5" data-aos="fade-up"  data-aos-once="true">
                     <h2 class="font-bold text-5xl text-blue-500 font-sans tracking-tight pb-5">Our Mission</h2>
-                    <P class="lg:w-[500px] w-[100%] font-sans text-gray-900 text-xl" >Meaningful Minds Therapeutic Services is a change agent dedicated to improving 
+                    <P class="lg:w-[500px] w-[100%] font-sans text-gray-900 text-xl" ><b class="text-5xl">M</b>eaningful Minds Therapeutic Services is a change agent dedicated to improving 
                         the lives and social conditions for people with mental health, substance use 
                         and trauma-related challenges, by promoting health, wellness and recovery in a 
                         meaningful way.<br> <br>  </P>
@@ -167,7 +167,7 @@
             <div class="about mx-auto container flex md:flex-row-reverse flex-col md:justify-center lg:justify-evenly  p-5 lg:p-2 ">
               <div class="about-1 p-5" data-aos="fade-up"  data-aos-once="true">
                   <h2 class=" font-bold md:text-5xl lg:text-5xl text-5xl text-blue-500 font-sans tracking-tight pb-5 mt-12">Our Story</h2>
-                  <P class="md:w-[300px] lg:w-[700px]  w-[100%] font-sans text-gray-900" >Meaningful Minds was born through the vision of founder Jahneen Keatz Onyemachi.
+                  <P class="md:w-[300px] lg:w-[700px]  w-[100%] font-sans text-gray-900" ><b class="text-5xl">M</b>eaningful Minds was born through the vision of founder Jahneen Keatz Onyemachi.
                     Jahneen had a vision to provide services to the community that speaks to the heart of
                     the people, not the cookie-cutter same way of doing things. She has over 15 years of
                     experience as a help agent serving our most vulnerable population that includes but not
