--- a/Onboarding/templates/index.html
+++ b/Onboarding/templates/index.html
@@ -173,7 +173,7 @@
             <div class="about mx-auto container flex  flex-col md:justify-center lg:justify-evenly  p-5 lg:p-2 xl:p-20">
                 <div class="about-1 p-5 tetx-center justify-center align-middle items-center flex flex-col" data-aos="fade-up"  data-aos-once="true">
                     <h1  class="text-blue-500 text-5xl text-center  pb-3 font-bold ">Welcome!</h1>
-                    <P class="text-gray-950   text-xl sm:text-2xl lg:text-2xl xl:text-3xl font-sans w-[100%] font-bold uppercase text-center" style="letter-spacing: .1rem; word-spacing: .1rem;" >Even the strongest people need a little bit of help to work through some of 
+                    <P class="text-gray-950   text-xl sm:text-2xl lg:text-2xl xl:text-3xl font-sans w-[100%] font-bold uppercase text-center" style="letter-spacing: .1rem; word-spacing: .1rem;" > Even the strongest people need a little bit of help to work through some of 
                         life’s most challenging problems. Everyone has hurdles to overcome, and we’d 
                         love to help you along the way.
                         </P>
@@ -181,7 +181,7 @@
                 </div>
                 <div class="about-2 align_middle items-center justify-center   p-5 " data-aos="fade-up"  data-aos-once="true">
                    <p class="text-gray-500 font-sans  text-[18px] w-[100%] text-center">
-                        Here at Meaningful Minds Therapeutic Services, LLC, we realize that no two 
+                        <b class="text-5xl">H</b>ere at Meaningful Minds Therapeutic Services, LLC, we realize that no two 
                         people are the same, and we tailor our services to meet specific needs for 
                         individuals, family or groups. We love helping people understand the things 
                         that are holding them back and/or down with an in-depth approach. After 
@@ -205,7 +205,7 @@
             </div>
             <div class="about-2  p-5 pb-4" data-aos="fade-up"  data-aos-once="true">
                 <p class="text-gray-600 font-sans  text-[18px] w-full lg:w-[100%] text-left">
-                  Our practice specializes in helping people who are struggling with addiction, social and life skills, or behavior management. If you are trying to navigate these areas of life, we’re confident that we have the experience to help you rediscover what brings happiness to your life. Through therapy, there is always a way to address the issues you face and learn coping strategies to help you both right now and in the future.
+                 <b class="text-5xl">O</b>ur practice specializes in helping people who are struggling with addiction, social and life skills, or behavior management. If you are trying to navigate these areas of life, we’re confident that we have the experience to help you rediscover what brings happiness to your life. Through therapy, there is always a way to address the issues you face and learn coping strategies to help you both right now and in the future.
 
       Through therapy, we can get you on track to leading a happier, more fulfilling life by equipping you with the tools you need to more efficiently and confidently manage life’s challenges.
                         
