--- a/Onboarding/templates/services.html
+++ b/Onboarding/templates/services.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
+    <!-- <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}">
-    <link rel="manifest" href="{% static 'images/site.webmanifest' %}">
-    <title>Our Services | Meaningful Mind Therapeutic Services</title>
+    <link rel="manifest" href="{% static 'images/site.webmanifest' %}"> -->
+    <title>Our Services | Hope Rising Behavioral</title>
     <link rel="stylesheet" href="{% static 'css/about.css' %}?v=8">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
@@ -126,16 +126,18 @@
   
       <div class="header bg-white">
         <div class="logo">
-          <a class="navbar-brand" href="#"><img src="{% static 'images/mm logo.jpg' %}" alt=""></a>
+          <a class="navbar-brand" href="#"><img src="{% static 'images/IMG-20240926-WA0049.jpg' %}" alt=""></a>
           
         </div>
         <div class="mail">
           <a class= "mail-info" href=""><img src="{% static 'images/icons8-email-48.png' %}" style="padding-bottom: 17px;" alt=""> 
           </a> 
-          <h3>EMAIL ADDRESS<br><a href="mailto:meaningfulmindsllc@gmail.com">meaningfulmindsllc@gmail.com</a></h3>
+          <h3>EMAIL ADDRESS<br><a href="mailto:hoperisingbehavioural@gmail.com">hoperisingbehavioural@gmail.com</a></h3>
           <a class= "Call-info" href=""><img src="{% static 'images/icons8-phone-48.png' %}" style="padding-bottom: 7px;" alt=""></a>
-          <h3>TELEPHONE<br><a href="{% url 'Onboarding:home' %}">410-449-3988
-
+          <h3>TELEPHONE<br><a href="{% url 'Onboarding:home' %}">
+            443-838-8765
+            <br>
+            443-831-1096
           </a></h3>
         </div>
       </div>
@@ -154,11 +156,11 @@
         </section>
         <!-- End of Welcome Banner -->
 
-        <section id="services" class=" py-5">
+        <!-- <section id="services" class=" py-5">
         <div class="features container mx-auto justify-center mt:4 lg:mt-8">
-           <!-- title banner -->
+            title banner 
         <div data-aos="fade-up"  data-aos-once="true" class="title-banner">
-          <!-- <h1 class="lg:text-4xl font-bold md:text-3xl text-3xl text-center text-blue-500 capitalize">What We <span class="text-blue-500">do here</span></h1> -->
+          <h1 class="lg:text-4xl font-bold md:text-3xl text-3xl text-center text-blue-500 capitalize">What We <span class="text-blue-500">do here</span></h1> 
           <div class="mx-auto max-w-2xl lg:text-center lg:pl-[0px] pl-5 lg:pr-[0px] pr-2 md:mb-8 " >
           
             <h1 class="mt-2 text-3xl font-bold tracking-tight  text-blue-500 sm:text-4xl">What We Do Here</h1>
@@ -362,7 +364,7 @@ please contact Meaningful Minds Therapeutic Services today.
             </div>
           </div>
         </div>
-        </section>
+        </section> -->
         
             
         <!-- End of About Section -->
@@ -387,7 +389,7 @@ X - https://x.com/meaningful45835
 instagram - https://www.instagram.com/meaningfulmindsllc/
 Facebook - https://web.facebook.com/profile.php?id=100089789233240
  -->
-      
+<!--       
 <footer class="bg-blue-950 text-gray-600 body-font" data-aos="zoom-in"  data-aos-once="true">
   <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
     <a href="{% url 'Onboarding:home' %}" class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
@@ -432,7 +434,7 @@ Facebook - https://web.facebook.com/profile.php?id=100089789233240
    
     <img src="{% static 'images/mmm partners logos.jpg' %}" alt="">
   </p>
-</footer>
+</footer> -->
       
     </main>
 
