--- a/Onboarding/templates/index.html
+++ b/Onboarding/templates/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}">
-    <link rel="manifest" href="{% static 'images/site.webmanifest' %}"> -->
-    <title>Hope Rising Behavioral</title>
+    <link rel="manifest" href="{% static 'images/site.webmanifest' %}">
+    <title>Meaningful Mind Therapeutic Services</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}?v=12">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
@@ -138,19 +138,17 @@
   
       <div class="header">
         <div class="logo">
-          <a class="navbar-brand" href="#"><img src="{% static 'images/IMG-20240926-WA0049.jpg' %}" alt=""></a>
+          <a class="navbar-brand" href="#"><img src="{% static 'images/mm logo.jpg' %}" alt=""></a>
           
         </div>
         <div class="mail">
           <a class= "mail-info" href=""><img src="{% static 'images/icons8-email-48.png' %}" style="padding-bottom: 17px;" alt=""> 
           </a> 
          
-          <h3>EMAIL ADDRESS<br><a href="mailto:meaningfulmindsllc@gmail.com">hoperisingbehavioural@gmail.com</a></h3>
+          <h3>EMAIL ADDRESS<br><a href="mailto:meaningfulmindsllc@gmail.com">meaningfulmindsllc@gmail.com</a></h3>
           <a class= "Call-info" href=""><img src="{% static 'images/icons8-phone-48.png' %}" style="padding-bottom: 7px;" alt=""></a>
-          <h3>TELEPHONE<br><a href="{% url 'Onboarding:home' %}">
-            443-838-8765
-            <br>
-            443-831-1096
+          <h3>TELEPHONE<br><a href="{% url 'Onboarding:home' %}">410-449-3988
+
           </a></h3>
         </div>
       </div>
@@ -182,8 +180,7 @@
                     <a href="{% url 'Onboarding:services' %}"><button class="bg-blue-500 p-4 mt-8 w-[200px] text-white text-2xs font-sans uppercase font-bold  cursor-pointer">Our Services</button></a>
                 </div>
                 <div class="about-2 align_middle items-center justify-center   p-5 " data-aos="fade-up"  data-aos-once="true">
-                  <!--
-                    <p class="text-gray-500 font-sans  text-[18px] w-[100%] text-center">
+                   <p class="text-gray-500 font-sans  text-[18px] w-[100%] text-center">
                         <b class="text-5xl">H</b>ere at Meaningful Minds Therapeutic Services, LLC, we realize that no two 
                         people are the same, and we tailor our services to meet specific needs for 
                         individuals, family or groups. We love helping people understand the things 
@@ -192,8 +189,6 @@
                         adjust certain behaviors and thoughts to see things in a different, healthier 
                         way.
                     </p> 
-                    
-                    -->
                     
                       
                 </div>
@@ -310,7 +305,7 @@
     </div>
   </div>
 </div>
-<!-- 
+
 
       
 <section id="faq" class="">
@@ -442,7 +437,7 @@ diagnosis conditions, which are addressed throughout treatment.
 </section>
 
      </main> 
-      
+      <!--
   This example requires some changes to your config:
   
   ```
@@ -456,7 +451,7 @@ diagnosis conditions, which are addressed throughout treatment.
   }
   ```
 -->
-<!--
+
 <footer class="bg-blue-950 text-gray-600 body-font" data-aos="zoom-in"  data-aos-once="true">
   <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
     <a href="{% url 'Onboarding:home' %}" class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
@@ -502,7 +497,7 @@ diagnosis conditions, which are addressed throughout treatment.
     <img src="{% static 'images/mmm partners logos.jpg' %}" alt="">
   </p>
 </footer>
-  -->
+ 
 
       
     </main>
