--- a/Onboarding/templates/about.html
+++ b/Onboarding/templates/about.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}"> -->
-    <!-- <link rel="manifest" href="{% static 'images/site.webmanifest' %}"> -->
-    <title>About Us | Hope Rising Behavioural</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'images/site.webmanifest' %}">
+    <title>About Us | Meaningful Mind Therapeutic Services</title>
     <link rel="stylesheet" href="{% static 'css/about.css' %}?v=11">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
@@ -121,18 +121,16 @@
   
       <div class="header">
         <div class="logo">
-          <a class="navbar-brand" href="#"><img src="{% static 'images/IMG-20240926-WA0049.jpg' %}" alt=""></a>
+          <a class="navbar-brand" href="#"><img src="{% static 'images/mm logo.jpg' %}" alt=""></a>
           
         </div>
         <div class="mail">
           <a class= "mail-info" href=""><img src="{% static 'images/icons8-email-48.png' %}" style="padding-bottom: 17px;" alt=""> 
           </a> 
-          <h3>EMAIL ADDRESS<br><a href="mailto:meaningfulmindsllc@gmail.com">hoperisignbehavioural@gmail.com</a></h3>
+          <h3>EMAIL ADDRESS<br><a href="mailto:meaningfulmindsllc@gmail.com">meaningfulmindsllc@gmail.com</a></h3>
           <a class= "Call-info" href=""><img src="{% static 'images/icons8-phone-48.png' %}" style="padding-bottom: 7px;" alt=""></a>
-          <h3>TELEPHONE<br><a href="{% url 'Onboarding:home' %}">
-            443-838-8765
-            <br>
-            443-831-1096
+          <h3>TELEPHONE<br><a href="{% url 'Onboarding:home' %}">410-449-3988
+
           </a></h3>
         </div>
       </div>
@@ -152,7 +150,7 @@
         <!-- End of Welcome Banner -->
 
         <!-- About Section -->
-      <!-- <section id="About" class="lg:mt-10 mt-10" >
+      <section id="About" class="lg:mt-10 mt-10" >
             <div class="about mx-auto container flex lg:flex-row flex-col bg-blue-200 md:justify-center lg:justify-evenly  xl:p-20">
                 <div class="about-1 p-5" data-aos="fade-up"  data-aos-once="true">
                     <h2 class="font-bold text-5xl text-blue-500 font-sans tracking-tight pb-5">Our Mission</h2>
@@ -198,7 +196,7 @@
            </div>
 
 
-        </section> -->
+        </section>
 
        
         <!-- End of About Section -->
@@ -218,7 +216,7 @@
   }
   ```
 -->
-<!-- 
+
 <footer class="bg-blue-950 text-gray-600 body-font" data-aos="zoom-in"  data-aos-once="true">
   <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
     <a href="{% url 'Onboarding:home' %}" class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
@@ -264,7 +262,7 @@
     <img src="{% static 'images/mmm partners logos.jpg' %}" alt="">
   </p>
 </footer>
-       -->
+      
     </main>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
