--- a/Onboarding/templates/contacts.html
+++ b/Onboarding/templates/contacts.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}">
     <link rel="manifest" href="{% static 'images/site.webmanifest' %}">
-    <title>Contact Us | Meaningful Mind Therapeutic Services</title>
+    <title>Contact Us | Hope Rising Behavioural</title>
     <link rel="stylesheet" href="{% static 'css/about.css' %}?v=8">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
@@ -37,7 +37,7 @@
               <div class="relative flex h-16 items-center justify-between">
                 <div class="absolute inset-y-0 left-0 flex items-center">
                   <!-- Logo -->
-                  <a class="navbar-brand" href="#"><img src="{% static 'images/mm logo.jpg' %}" alt="Logo" class="w-auto"></a>
+                  <a class="navbar-brand" href="#"><img src="{% static 'images/IMG-20240926-WA0049.jpg' %}" alt="Logo" class="w-auto"></a>
                 </div>
                 <div class="flex flex-1 items-center justify-center md:items-stretch sm:justify-start">
                   <div class="flex flex-shrink-0 items-center">
@@ -106,16 +106,18 @@
   
       <div class="header">
         <div class="logo">
-          <a class="navbar-brand" href="#"><img src="{% static 'images/mm logo.jpg' %}" alt=""></a>
+          <a class="navbar-brand" href="#"><img src="{% static 'images/IMG-20240926-WA0049.jpg' %}" alt=""></a>
           
         </div>
         <div class="mail">
           <a class= "mail-info" href=""><img src="{% static 'images/icons8-email-48.png' %}" style="padding-bottom: 17px;" alt=""> 
           </a> 
-          <h3>EMAIL ADDRESS<br><a href="mailto:meaningfulmindsllc@gmail.com">meaningfulmindsllc@gmail.com</a></h3>
+          <h3>EMAIL ADDRESS<br><a href="mailto:meaningfulmindsllc@gmail.com">hoperisingbehavioral@gmail.com</a></h3>
           <a class= "Call-info" href=""><img src="{% static 'images/icons8-phone-48.png' %}" style="padding-bottom: 7px;" alt=""></a>
-          <h3>TELEPHONE<br><a href="{% url 'Onboarding:home' %}">410-449-3988
-
+          <h3>TELEPHONE<br><a href="{% url 'Onboarding:home' %}">
+            443-838-8765
+            <br>
+            443-831-1096
           </a></h3>
         </div>
       </div>
@@ -209,7 +211,7 @@
   ```
 -->
 
-
+<!-- 
 <footer class="bg-blue-950 text-gray-600 body-font" data-aos="zoom-in"  data-aos-once="true">
   <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
     <a href="{% url 'Onboarding:home' %}" class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
@@ -254,7 +256,7 @@
    
     <img src="{% static 'images/mmm partners logos.jpg' %}" alt="">
   </p>
-</footer>
+</footer> -->
       
     </main>
 
