--- a/Onboarding/templates/contacts.html
+++ b/Onboarding/templates/contacts.html
@@ -127,9 +127,9 @@
         <!-- Welcome Banner -->
         <section id="welcome-banner" data-aos="fade-up"  data-aos-once="true">
           <div class="background-image">
-            <img src="{% static 'images/people-meeting-support-group.jpg' %}" alt="" class="background">
-            <img src="{% static 'images/47250.jpg'%}" alt="" class="background">
-            <img src="{% static 'images/woman-therapy-session-attentive-psychologist-attentive-psychologist-holding-pencil-her-hands-making-written-notes-while-listening-her-client.jpg' %}" alt="" class="background">
+            <img src="{% static 'images/family-support-caregiver-blog-banner.jpg' %}" alt="" class="background">
+            <img src="{% static 'images/images (16).jpeg'%}" alt="" class="background">
+            <img src="{% static 'images/images (19).jpeg' %}" alt="" class="background">
           </div>
           <h1 class="font-mono font-extrabold text-left text-3xl sm:text-5xl">CONTACT <span class="text-blue-400">US</span></h1>
          <h3 class="font-bold font-mono text-white pl-[90px] uppercase text-2xl sm:text-4xl">Home | Contact Us</h3>
