--- a/Onboarding/templates/about.html
+++ b/Onboarding/templates/about.html
@@ -46,105 +46,106 @@
 <body>
     
 <!-- NavBar -->
-    <header>
-        <nav class="bg-white py-5">
-            <div class="mx-auto max-w-7xl px-2 md:px-6 lg:px-8">
-              <div class="relative flex h-16 items-center justify-between">
-                <div class="absolute inset-y-0 left-0 flex items-center">
-                  <!-- Logo -->
-                  <a class="navbar-brand" href="#"><img src="{% static 'images/mm logo.jpg' %}" alt="Logo" class="w-auto"></a>
-                </div>
-                <div class="flex flex-1 items-center justify-center md:items-stretch sm:justify-start">
-                  <div class="flex flex-shrink-0 items-center">
-                  </div>
-                  <div class="hidden lg:ml-6 lg:block">
-                    <div class="flex space-x-4">
-                      <a href="{% url 'Onboarding:home' %}" class="rounded-md px-3 py-2  text-sm uppercase font-medium" aria-current="page">HOME</a>
-                      <a href="{% url 'Onboarding:about' %}" class="rounded-md px-3 py-2 text-sm uppercase active font-medium">About US</a>
-                      <a href="{% url 'Onboarding:services' %}" class=" px-3 py-2 text-sm uppercase font-medium">Our services</a>
-                      <a href="{% url 'Onboarding:contacts' %}" class=" px-3 py-2 text-sm uppercase font-medium">Contact us</a>
-                      <a target="_blank" class="px-3 py-2 text-sm uppercase font-medium" href="https://forms.gle/SYngRR6FtZ67UbB78">Career</a>
-                      <a target="_blank" class="px-3 py-2 text-sm uppercase font-medium" href="https://forms.gle/5WsGnkkdFrFPkRaF6">Referral</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="absolute inset-y-0 right-0 flex items-center lg:hidden">
-                  <!-- Mobile menu button-->
-                  <button type="button" class="relative toggle inline-flex items-center justify-center rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false" onclick="toggleMenu()">
-                    <span class="sr-only">Open main menu</span>
-                    <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-                    </svg>
-                    <svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-                    </svg>
-                  </button>
-                </div>
+<header>
+  <nav class="bg-white py-5">
+      <div class="mx-auto max-w-7xl px-2 md:px-6 lg:px-8">
+        <div class="relative flex h-16 items-center justify-between">
+          <div class="absolute inset-y-0 left-0 flex items-center">
+            <!-- Logo -->
+            <a class="navbar-brand" href="#"><img src="{% static 'images/IMG-20240926-WA0049.jpg' %}" alt="Logo" class="w-auto"></a>
+          </div>
+          <div class="flex flex-1 items-center justify-center md:items-stretch sm:justify-start">
+            <div class="flex flex-shrink-0 items-center">
+            </div>
+            <div class="hidden lg:ml-6 lg:block">
+              <div class="flex space-x-4">
+                <a href="{% url 'Onboarding:home' %}" class="rounded-md px-3 py-2 active text-sm uppercase font-medium" aria-current="page">HOME</a>
+                <a href="{% url 'Onboarding:about' %}" class="rounded-md px-3 py-2 text-sm uppercase font-medium">About US</a>
+                <a href="{% url 'Onboarding:services' %}" class=" px-3 py-2 text-sm uppercase font-medium">Our services</a>
+                <a href="{% url 'Onboarding:contacts' %}" class=" px-3 py-2 text-sm uppercase font-medium">Contact us</a>
+                <a target="_blank" class="px-3 py-2 text-sm uppercase font-medium" href="https://forms.gle/SYngRR6FtZ67UbB78">Career</a>
+          <a target="_blank" class="px-3 py-2 text-sm uppercase font-medium" href="https://forms.gle/5WsGnkkdFrFPkRaF6">Referral</a>
               </div>
             </div>
-            <!-- Mobile menu, show/hide based on menu state. -->
-            <div class="hidden transition-height lg:hidden" id="mobile-menu">
-              <div class="space-y-1 px-2 pb-3 pt-2">
-                <a href="{% url 'Onboarding:home' %}" class="block rounded-md px-3 py-2 text-base font-medium" aria-current="page">Home</a>
-                <a href="{% url 'Onboarding:about' %}" class="active  block rounded-md px-3 py-2 text-base font-medium">About Us</a>
-                <a href="{% url 'Onboarding:services' %}" class=" block rounded-md px-3 py-2 text-base font-medium">Our Services</a>
-                <a href="{% url 'Onboarding:contacts' %}" class=" block rounded-md px-3 py-2 text-base font-medium">Contact Us</a>
-                <a target="_blank" class=" block rounded-md px-3 py-2 text-base font-medium" href="https://forms.gle/SYngRR6FtZ67UbB78">Career</a>
-                <a target="_blank" class=" block rounded-md px-3 py-2 text-base font-medium" href="https://forms.gle/5WsGnkkdFrFPkRaF6">Referral</a>
-              </div>
-            </div>
-          </nav>
-          <!--   git remote add origin git@github.com:Victory-Sakey/HRB.git-->
-          <script>
-            function toggleMenu() {
-              const menu = document.getElementById('mobile-menu');
-              if (menu.classList.contains('hidden')) {
-                menu.classList.remove('hidden');
-                menu.style.height = menu.scrollHeight + 'px';
-              } else {
-                menu.style.height = '0';
-                menu.addEventListener('transitionend', () => {
-                  menu.classList.add('hidden');
-                }, { once: true });
-              }
-            }
-          
-            function toggleUserMenu() {
-              const menu = document.getElementById('user-menu');
-              menu.classList.toggle('hidden');
-            }
-          </script>
-          
-          
-        
-      
-  
-      <div class="header">
-        <div class="logo">
-          <a class="navbar-brand" href="#"><img src="{% static 'images/IMG-20240926-WA0049.jpg' %}" alt=""></a>
-          
-        </div>
-        <div class="mail">
-          <a class= "mail-info" href=""><img src="{% static 'images/icons8-email-48.png' %}" style="padding-bottom: 17px;" alt=""> 
-          </a> 
-          <h3>EMAIL ADDRESS<br><a href="mailto:meaningfulmindsllc@gmail.com">hoperisignbehavioural@gmail.com</a></h3>
-          <a class= "Call-info" href=""><img src="{% static 'images/icons8-phone-48.png' %}" style="padding-bottom: 7px;" alt=""></a>
-          <h3>TELEPHONE<br><a href="{% url 'Onboarding:home' %}">
-            443-838-8765
-            <br>
-            443-831-1096
-          </a></h3>
+          </div>
+          <div class="absolute inset-y-0 right-0 flex items-center lg:hidden">
+            <!-- Mobile menu button-->
+            <button type="button" class="relative toggle inline-flex items-center justify-center rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false" onclick="toggleMenu()">
+              <span class="sr-only">Open main menu</span>
+              <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+              </svg>
+              <svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
-    </header>
+      <!-- Mobile menu, show/hide based on menu state. -->
+      <div class="hidden transition-height lg:hidden" id="mobile-menu">
+        <div class="space-y-1 px-2 pb-3 pt-2">
+          <a href="{% url 'Onboarding:home' %}" class="active block rounded-md px-3 py-2 text-base font-medium" aria-current="page">Home</a>
+          <a href="{% url 'Onboarding:about' %}" class=" block rounded-md px-3 py-2 text-base font-medium">About Us</a>
+          <a href="{% url 'Onboarding:services' %}" class=" block rounded-md px-3 py-2 text-base font-medium">Our Services</a>
+          <a href="{% url 'Onboarding:contacts' %}" class=" block rounded-md px-3 py-2 text-base font-medium">Contact Us</a>
+          <a target="_blank" class=" block rounded-md px-3 py-2 text-base font-medium" href="https://forms.gle/SYngRR6FtZ67UbB78">Career</a>
+          <a target="_blank" class=" block rounded-md px-3 py-2 text-base font-medium" href="https://forms.gle/5WsGnkkdFrFPkRaF6">Referral</a>
+        </div>
+      </div>
+    </nav>
+    
+    <script>
+      function toggleMenu() {
+        const menu = document.getElementById('mobile-menu');
+        if (menu.classList.contains('hidden')) {
+          menu.classList.remove('hidden');
+          menu.style.height = menu.scrollHeight + 'px';
+        } else {
+          menu.style.height = '0';
+          menu.addEventListener('transitionend', () => {
+            menu.classList.add('hidden');
+          }, { once: true });
+        }
+      }
+    
+      function toggleUserMenu() {
+        const menu = document.getElementById('user-menu');
+        menu.classList.toggle('hidden');
+      }
+    </script>
+    
+    
+  
+
+
+<div class="header">
+  <div class="logo">
+    <a class="navbar-brand" href="#"><img src="{% static 'images/IMG-20240926-WA0049.jpg' %}" alt=""></a>
+    
+  </div>
+  <div class="mail">
+    <a class= "mail-info" href=""><img src="{% static 'images/icons8-email-48.png' %}" style="padding-bottom: 17px;" alt=""> 
+    </a> 
+   
+    <h3>EMAIL ADDRESS<br><a href="mailto:meaningfulmindsllc@gmail.com">hoperisingbehavioural@gmail.com</a></h3>
+    <a class= "Call-info" href=""><img src="{% static 'images/icons8-phone-48.png' %}" style="padding-bottom: 7px;" alt=""></a>
+    <h3>TELEPHONE<br><a href="{% url 'Onboarding:home' %}">
+      443-838-8765
+      <br>
+      443-831-1096
+    </a></h3>
+  </div>
+</div>
+</header>
 
     <main>
         <!-- Welcome Banner -->
         <section id="welcome-banner" data-aos="fade-up"  data-aos-once="true">
           <div class="background-image">
-            <img src="{% static 'images/people-meeting-support-group.jpg' %}" alt="" class="background">
-            <img src="{% static 'images/47250.jpg'%}" alt="" class="background">
-            <img src="{% static 'images/woman-therapy-session-attentive-psychologist-attentive-psychologist-holding-pencil-her-hands-making-written-notes-while-listening-her-client.jpg' %}" alt="" class="background">
+            <img src="{% static 'images/family-support-caregiver-blog-banner.jpg' %}" alt="" class="background">
+            <img src="{% static 'images/images (16).jpeg'%}" alt="" class="background">
+            <img src="{% static 'images/images (19).jpeg' %}" alt="" class="background">
           </div>
           <h1 class="font-mono text-3xl sm:text-5xl font-extrabold text-left">ABOUT <span class="text-blue-400">US</span></h1>
          <h3 class="smtext-4xl text-2xl font-bold font-mono text-white pl-[90px] uppercase">Home | About Us</h3>
@@ -152,21 +153,23 @@
         <!-- End of Welcome Banner -->
 
         <!-- About Section -->
-      <!-- <section id="About" class="lg:mt-10 mt-10" >
+     <section id="About" class="lg:mt-10 mt-10" >
             <div class="about mx-auto container flex lg:flex-row flex-col bg-blue-200 md:justify-center lg:justify-evenly  xl:p-20">
                 <div class="about-1 p-5" data-aos="fade-up"  data-aos-once="true">
-                    <h2 class="font-bold text-5xl text-blue-500 font-sans tracking-tight pb-5">Our Mission</h2>
-                    <P class="lg:w-[500px] w-[100%] font-sans text-gray-900 text-xl" ><b class="text-5xl">M</b>eaningful Minds Therapeutic Services is a change agent dedicated to improving 
-                        the lives and social conditions for people with mental health, substance use 
-                        and trauma-related challenges, by promoting health, wellness and recovery in a 
-                        meaningful way.<br> <br>  </P>
-                   <a href="{% url 'Onboarding:contacts' %}"> <button class="bg-red-500 hover:bg-green-500 p-4 mt-8 w-[250px] text-white text-2xs font-sans uppercase font-bold  cursor-pointer">Book An Appointment</button></a>
+                  
+                    <P class="lg:w-[500px] w-[100%] font-sans text-gray-900 text-xl" >  
+                      Hope Rising Behavioral LLC was founded on the idea that every individual deserves the best care. We
+                      strive to provide high-quality home care services to our clients and their families right in the comfort of
+                      their own homes. We design personalized care plans to meet the individual needs of each client, and we
+                      take pride in our ability to build long-term relationships with our clients and their families.  
+                    </P>
+                   <a href="{% url 'Onboarding:contacts' %}"> <button class="bg-blue-500 hover:bg-blue-900 p-4 mt-8 w-[250px] text-white text-2xs font-sans uppercase font-bold  cursor-pointer">Book An Appointment</button></a>
                 </div>
                 <div class="about-2 p-5 mt-1" data-aos="fade-up"  data-aos-once="true">
-                    <img class="md:w-[850px] w-full rounded-[50px]" src="{% static 'images/9953.jpg' %}" alt="">
+                    <img class="md:w-[850px] w-full rounded-[50px]" src="{% static 'images/images (17).jpeg' %}" alt="">
             </div>
           </div>
-            <div class="about mx-auto container flex md:flex-row-reverse flex-col md:justify-center lg:justify-evenly  p-5 lg:p-2 ">
+            <!--  <div class="about mx-auto container flex md:flex-row-reverse flex-col md:justify-center lg:justify-evenly  p-5 lg:p-2 ">
               <div class="about-1 p-5" data-aos="fade-up"  data-aos-once="true">
                   <h2 class=" font-bold md:text-5xl lg:text-5xl text-5xl text-blue-500 font-sans tracking-tight pb-5 mt-12">Our Story</h2>
                   <P class="md:w-[300px] lg:w-[700px]  w-[100%] font-sans text-gray-900" ><b class="text-5xl">M</b>eaningful Minds was born through the vision of founder Jahneen Keatz Onyemachi.
