--- a/Onboarding/templates/index.html
+++ b/Onboarding/templates/index.html
@@ -161,11 +161,11 @@
         <!-- Welcome Banner -->
         <section id="welcome-banner" >
           <div class="background-image">
-            <img src="{% static 'images/people-meeting-support-group.jpg' %}" alt="" class="background">
-            <img src="{% static 'images/47250.jpg'%}" alt="" class="background">
-            <img src="{% static 'images/woman-therapy-session-attentive-psychologist-attentive-psychologist-holding-pencil-her-hands-making-written-notes-while-listening-her-client.jpg' %}" alt="" class="background">
+            <img src="{% static 'images/family-support-caregiver-blog-banner.jpg' %}" alt="" class="background">
+            <img src="{% static 'images/images (16).jpeg'%}" alt="" class="background">
+            <img src="{% static 'images/images (19).jpeg' %}" alt="" class="background">
           </div>
-          <h1  class="sm:text-5xl text-3xl  font-bold">"From Healing to <span class="text-blue-400 font-bold">Wholeness</span>"</h1>
+          <h1  class="sm:text-5xl text-3xl  font-bold">"Every Individual Deserves the <span class="text-blue-400 font-bold">Best Care</span>"</h1>
           <a href="{% url 'Onboarding:about' %}"><button>Get Started</button></a>
         </section>
         <!-- End of Welcome Banner -->
@@ -175,9 +175,10 @@
             <div class="about mx-auto container flex  flex-col md:justify-center lg:justify-evenly  p-5 lg:p-2 xl:p-20">
                 <div class="about-1 p-5 tetx-center justify-center align-middle items-center flex flex-col" data-aos="fade-up"  data-aos-once="true">
                     <h1  class="text-blue-500 text-5xl text-center  pb-3 font-bold ">Welcome!</h1>
-                    <P class="text-gray-950   text-xl sm:text-2xl lg:text-2xl xl:text-3xl font-sans w-[100%] font-bold uppercase text-center" style="letter-spacing: .1rem; word-spacing: .1rem;" > Even the strongest people need a little bit of help to work through some of 
-                        life’s most challenging problems. Everyone has hurdles to overcome, and we’d 
-                        love to help you along the way.
+                    <P class="text-gray-950   text-xl sm:text-2xl lg:text-2xl xl:text-4xl font-sans w-[100%] font-bold uppercase text-center" style="letter-spacing: .1rem; word-spacing: .1rem;" >
+                      Are you seeking top-tier home health care services that prioritizes your loved one’s well-being?
+Look no further, we go above and beyond to ensure our patient/client receives the compassionate and
+expert care they deserve.
                         </P>
                     <a href="{% url 'Onboarding:services' %}"><button class="bg-blue-500 p-4 mt-8 w-[200px] text-white text-2xs font-sans uppercase font-bold  cursor-pointer">Our Services</button></a>
                 </div>
@@ -202,27 +203,24 @@
         <!-- End of About Section -->
 
         <section id="About">
-          <h1 data-aos="fade-up"  data-aos-once="true" class="text-xl  lg:text-2xl uppercase  text-center text-gray-950 font-bold">Don't wait to get the help you need</h1>
+          <h1 data-aos="fade-up"  data-aos-once="true" class="text-xl  lg:text-2xl uppercase  text-center text-gray-950 font-bold">We treat your loved ones with dignity</h1>
         <div class="about mx-auto container flex lg:flex-row flex-col-reverse md:justify-center lg:justify-center  p-5 lg:p-2 xl:p-20">
             <div class="about-1 p-5" data-aos="fade-up"  data-aos-once="true">
                 <!-- <h1 class="text-red-500 text-xl  pb-3 font-extrabold ">Welcome!</h1> -->
-            <img class="w-[5500px]" src="{% static 'images/IMG-20240919-WA0033.jpg' %}" alt="">
+            <img class="w-[3000px]" src="{% static 'images/images (18).jpeg' %}" alt="">
             </div>
             <div class="about-2  p-5 pb-4" data-aos="fade-up"  data-aos-once="true">
                 <p class="text-gray-600 font-sans  text-[18px] w-full lg:w-[100%] text-left">
-                 <b class="text-5xl">O</b>ur practice specializes in helping people who are struggling with addiction, social and life skills, or behavior management. If you are trying to navigate these areas of life, we’re confident that we have the experience to help you rediscover what brings happiness to your life. Through therapy, there is always a way to address the issues you face and learn coping strategies to help you both right now and in the future.
-
-      Through therapy, we can get you on track to leading a happier, more fulfilling life by equipping you with the tools you need to more efficiently and confidently manage life’s challenges.
-                        
-      It is never too late to start living the life you’ve always wanted.
-
-      If you’re interested in becoming a better, happier, more fulfilled you,
-      get started by reaching out today!
+                 <b class="text-5xl">A</b>t Hope Rising Behavioral LLC, we understand that choosing the right care giving agency is a crucial
+decision. We take pride in offering a wide range of services designed to meet the unique needs of every
+patient.
+Our commitment to delivering exceptional care is evident in our team of dedicated caregivers, our
+comprehensive care plans, and our unwavering dedication to our local community.
                 </p>
                 <div class="buttons mt-5  justify-evenly lg:justify-evenly flex md:flex-row flex-col">
                   <div class="button-1 p-5 items-center mr-3  flex mb-5 lg:mb-0 " style="border: 2px solid rgb(240, 236, 236); border-radius: 2px;">
                       <img src="{% static 'images/icons8-compassion-50 (2).png' %}" alt="">
-                      <h1 class="pl-5 lg:pl-2  w-full uppercase font-bold">Always put desire above fear</h1>
+                      <h1 class="pl-5 lg:pl-2  w-full uppercase font-bold">Expert Caregivers</h1>
                   </div>
                   <div class="button-2 flex  p-5 items-center" style="border: 2px solid rgb(240, 236, 236); border-radius: 2px;">
                       <img src="{% static 'images/icons8-speech-bubble-50.png' %}" alt="">
@@ -277,17 +275,65 @@
       <div class="lg:pr-8 lg:pt-4">
         <div class="lg:max-w-lg">
           <!-- <h2 data-aos="fade-up"  data-aos-once="true" class="text-base font-semibold leading-7 text-green-600">Affordable Therapy</h2> -->
-          <p data-aos="fade-up"  data-aos-once="true" class="rates mt-2 text-3xl font-bold tracking-tight text-blue-500 sm:text-4xl">Rates & Insurance</p>
-          <p class="mt-6 text-lg leading-8 text-gray-600" data-aos="fade-up"  data-aos-once="true" >
-            <!-- $_____ per ______ minute session. -->
-           Medicaid / Medical Assistance
-           <br>
-           Rates: Sliding scale offered 
-          </p>
+          <p data-aos="fade-up"  data-aos-once="true" class="rates mt-2 text-3xl font-bold tracking-tight text-blue-500 sm:text-4xl">Why Choose Us?</p>
+        
+       
           <dl data-aos="fade-up"  data-aos-once="true" class="mt-10 max-w-xl space-y-8 text-base leading-7 text-gray-600 lg:max-w-none">
+
+           <div class="relative">
+              <dt class="inline font-semibold text-blue-900">
+                
+                Expert Caregivers.
+
+
+              </dt>
+              <dd class="inline">
+               Our certified, experienced caregivers help our patients enjoy a higher quality of life at home. We
+understand that each patient is unique, and we tailor our care plans to address their specific needs.
+Whether your loved one requires speech therapy, physical and occupational therapy, or personal care
+services, our caregivers have the expertise to provide top-notch care
+                
+              </dd>
+            
+
+            </div>
+
+             <div class="relative">
+              <dt class="inline font-semibold text-blue-900">
+                
+               Always Available.
+
+
+              </dt>
+              <dd class="inline">
+                Home care for your loved ones is available around the clock, even nights and weekends. We recognize
+that health issues and emergencies don&#39;t follow a schedule, which is why we offer 24/7 support to
+ensure your
+              </dd>
+            
+
+            </div>
+
+             <div class="relative">
+              <dt class="inline font-semibold text-blue-900">
+                
+                Compassionate Care.
+
+
+              </dt>
+              <dd class="inline">
+                Our Staff members approaches patient care in the same way we would with our own family. We
+understand the emotional toll that illness or injury can take on both patients and their families. Our
+caregivers are not only skilled professionals but also compassionate individuals who treat your loved
+one with the dignity and respect they deserve.
+                
+              </dd>
+            
+
+            </div>
            
             <div class="relative">
-              <dt class="inline font-semibold text-green-900">
+              <dt class="inline font-semibold text-blue-900">
                 
                 Any Other Questions? 
 
@@ -300,12 +346,13 @@
             
 
             </div>
-            <a href="{% url 'Onboarding:contacts' %}"><button class="bg-blue-500 p-4 mt-8 w-[200px] text-white text-2xs font-sans uppercase font-bold  hover:bg-green-900 cursor-pointer">Contact Us</button></a>
+            
+            <a href="{% url 'Onboarding:contacts' %}"><button class="bg-blue-500 p-4 mt-8 w-[200px] text-white text-2xs font-sans uppercase font-bold  hover:bg-blue-900 cursor-pointer">Contact Us</button></a>
           </dl>
         </div>
       </div>
       <div data-aos="fade-up"  data-aos-once="true" class="">
-        <img src="{% static 'images/2148363603.jpg' %}" alt="Product screenshot" class="w-[28rem] max-w-none rounded-xl shadow-xl ring-1 ring-gray-400/10 sm:w-[37rem] md:-ml-4 lg:-ml-0" width="2432" height="1442">
+        <img src="{% static 'images/images (22).jpeg' %}" alt="Product screenshot" class="w-[28rem] max-w-none rounded-xl shadow-xl ring-1 ring-gray-400/10 sm:w-[37rem] md:-ml-4 lg:-ml-0" width="2432" height="1442">
       </div>
     </div>
   </div>
@@ -456,7 +503,7 @@ diagnosis conditions, which are addressed throughout treatment.
   }
   ```
 -->
-<!--
+<!-- 
 <footer class="bg-blue-950 text-gray-600 body-font" data-aos="zoom-in"  data-aos-once="true">
   <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
     <a href="{% url 'Onboarding:home' %}" class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
@@ -501,10 +548,8 @@ diagnosis conditions, which are addressed throughout treatment.
    
     <img src="{% static 'images/mmm partners logos.jpg' %}" alt="">
   </p>
-</footer>
-  -->
+</footer> -->
 
-      
     </main>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
