--- a/static/css/about.css
+++ b/static/css/about.css
@@ -33,7 +33,7 @@ nav {
 }
 
 .active {
-    color: green;
+    color: darkblue;
 }
 
 nav .navbar-nav {
@@ -48,7 +48,7 @@ nav a {
 
 
 nav a:hover  {
-    color: green  ;
+    color: darkblue  ;
 }
 
 button.toggle {
@@ -86,7 +86,7 @@ button.toggle {
     padding-top: 10px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 17px;
-    color: green;
+    color: rgb(9, 98, 137);
     text-decoration: none;
     font-weight: bolder;
 }
