--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -33,7 +33,7 @@ nav {
 }
 
 .active {
-    color: green;
+    color: darkblue;
 }
 
 nav .navbar-nav {
@@ -48,7 +48,7 @@ nav a {
 
 
 nav a:hover  {
-    color: green  ;
+    color: darkblue;
 }
 
 button.toggle {
@@ -89,7 +89,7 @@ button.toggle {
     padding-top: 10px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 17px;
-    color: green;
+    color: #054f6f;
     text-decoration: none;
     font-weight: bolder;
 }
@@ -167,7 +167,7 @@ main #welcome-banner:before {
 #welcome-banner button:hover {
     outline: none;
     background-color: white;
-    color: green;
+    color: darkblue;
     transition: .3s ease-in-out;
 }
 
@@ -208,7 +208,7 @@ main #welcome-banner:before {
 /* End of Welcome Banner */
 
 #About .about .about-1 button:hover {
-    background-color: rgb(6, 182, 6);
+    background-color: rgb(6, 68, 182);
     transition: .3s ease-in-out;
 }
 
