--- a/Onboarding/templates/about.html
+++ b/Onboarding/templates/about.html
@@ -221,53 +221,38 @@
   }
   ```
 -->
-<!-- 
 <footer class="bg-blue-950 text-gray-600 body-font" data-aos="zoom-in"  data-aos-once="true">
   <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
     <a href="{% url 'Onboarding:home' %}" class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
-      <img  class="rounded-[20px] w-[250px]" src="{% static 'images/mm logo.jpg' %}">
+      <img  class="rounded-[20px] w-[250px]" src="{% static 'images/IMG-20240926-WA0049.jpg' %}">
     </a>
     <p class="text-sm text-gray-200 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4 flex flex-col justify-center align-items"> 
 
-      <h1 class="text-white pr-3 md:text-left text-center"> 606 Edmondson Ave Suite 200
+      <h1 class="text-white pr-3 md:text-left text-center"> 9034 Medow Heights Road, Randllstown MD. 2113
         <br>
-        <a href="mailto:meaningfulmindsllc@gmail.com">meaningfulmindsllc@gmail.com</a>
+        <a href="mailto:hoperisingbehavioral@gmail.com">hoperisingbehavioural@gmail.com</a>
         <br>
-        <a href="{% url 'Onboarding:home' %}">410-449-3988</a></h1>
-      
-      <br>
+        <a href="{% url 'Onboarding:home' %}">443-838-8765
+          <br>
+          443-831-1096
+          </a></h1>
+   <!--
+       
+    <br>
       <img class=" mt-2 w-[80px] rounded-lg items-center align-middle justify-center " src="{% static 'images/IMG-20240903-WA0036(1).jpg' %}" alt="">
+    -->
     
     </p>
-    
-    <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center flex-col sm:justify-start">
-      <a href="mailto:meaningfulmindsllc@gmail.com" class="mt-2 mb-2 text-sm text-gray-200">meaningfulmindsllc</a>
-      <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
-        <a target="_blank" href="https://web.facebook.com/profile.php?id=100089789233240" class="text-gray-500 cursor-pointer">  
-          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-            <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
-          </svg>
-        </a>
-        <a target="_blank" href="https://x.com/meaningful45835" class="ml-3 cursor-pointer text-gray-500">
-          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-            <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
-          </svg>
-        </a>
-        <a target="_blank"  href="https://www.instagram.com/meaningfulmindsllc/" class="ml-3 cursor-pointer text-gray-500">
-          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-            <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
-            <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
-          </svg>
-        </a>
-      </span>
-    </span>
+  
   </div>
-  <p class=" text-gray-400 p-2">
+   <!--
+    <p class=" text-gray-400 p-2">
    
-    <img src="{% static 'images/mmm partners logos.jpg' %}" alt="">
-  </p>
-</footer>
-       -->
+   <img src="{% static 'images/mmm partners logos.jpg' %}" alt="">
+ </p>
+    -->
+</footer> 
+      
     </main>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
